--- a/Client/BlazorApp/Shared/MainLayout.razor.css
+++ b/Client/BlazorApp/Shared/MainLayout.razor.css
@@ -4,6 +4,8 @@
 }
 
 .main {
+    align-items: center; /* Center items vertically */
+
     margin-left: 20px;
     margin-right: 20px;
     display: block;
