--- a/Client/BlazorApp/Pages/Index2.razor.css
+++ b/Client/BlazorApp/Pages/Index2.razor.css
@@ -26,8 +26,10 @@
     z-index: 0;
     width: 300px;
     font-size: x-large;
-    height: 50px;
+    height: 40px;
     padding-inline: 10px;
+    margin-right:30px;
+
 }
 
 .btn-clear,
@@ -39,7 +41,7 @@
     position: absolute;
     display: flex;
     margin-left: 265px;
-    margin-top: 10px;
+    margin-top: 5px; 
 }
 
 
@@ -55,7 +57,7 @@
     margin-bottom: 15px;
     margin-left:50px;
     box-sizing: border-box;
-    margin-left: 45px;
+    margin-left: 35px;
 }
 
 .export-btn {
@@ -98,10 +100,10 @@
 
     .btn-clear,
     .search-btn {
-        right: 25px;
+        right: 55px;
     }
 
     .btn-clear {
-        right: 55px;
+        right: 85px;
     }
 }
