--- a/Client/BlazorApp/Shared/MainLayout.razor.css
+++ b/Client/BlazorApp/Shared/MainLayout.razor.css
@@ -5,7 +5,7 @@
 
 .main {
     align-items: center; /* Center items vertically */
-
+    justify-content: center;
     margin-left: 20px;
     margin-right: 20px;
     display: block;
@@ -23,7 +23,7 @@
     height: 100vh;
 }
 
-@media (max-width: 641px) {
+@media (max-width: 730px) {
 
     .sidebar {
         width: 100%;
@@ -33,7 +33,7 @@
 }
 
 
-    @media (min-width: 641px) {
+    @media (min-width: 730px) {
         .page {
             flex-direction: row;
         }
